--- a/index.html
+++ b/index.html
@@ -182,14 +182,14 @@
 </template>
 <script type="text/javascript">
   var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
   var getFireballSpeed = function(left) {
     if (left) {
       return 5;
     }
     return 2;
   }
-  var wizardSpeed = 3;
-  var wizardWidth = 70;
   var getWizardHeight = function() {
     return 1.337 * wizardWidth;
   }
@@ -200,6 +200,7 @@
     return height * 2 / 3 - getWizardHeight();
   }
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
