--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
 </script>
 <script src="js/util.js"></script>
 <script src="js/backend.js"></script>
+<script src="js/debounce.js"></script>
 <script src="js/wizard.js"></script>
 <script src="js/render.js"></script>
 <script src="js/similar.js"></script>
